# nexus-docs

./: .gitignore  main.js  package.json  vite.renderer.config.mjs
doc-ai/: Cargo.toml  index.d.ts  index.js  package.json
doc-ai/src/: lib.rs
onnx-ocr/: Cargo.toml
onnx-ocr/examples/: detect_rec.rs  doc_analysis_pipeline.rs  ocr.rs  pdf_parser.rs  table_cell_detection.rs  table_cls.rs  table_pipline.rs  table_structure.rs  text_detection.rs
onnx-ocr/examples/layout/: Cargo.toml
onnx-ocr/examples/layout/src/: main.rs
onnx-ocr/src/: api.rs  detect.rs  lib.rs  main.rs  model_context.rs  ocr.rs  settings.rs
onnx-ocr/src/common/: bounding_box.rs  imgproc.rs  min_area_rect.rs  mod.rs  onnx.rs  quad.rs
onnx-ocr/src/doc_layout/: postprocess.rs  predictor.rs  preprocess.rs
onnx-ocr/src/doc_text_ori/: predictor.rs  preprocess.rs
onnx-ocr/src/formula_rec/: postprocess.rs  predictor.rs  preprocess.rs
onnx-ocr/src/pdf/: parser.rs
onnx-ocr/src/pipeline/: doc_analysise.rs  mod.rs  ocr.rs  table.rs
onnx-ocr/src/pipeline/layout_parsing/: doc_analysise.rs  layout_object.rs  mod.rs  util.rs
onnx-ocr/src/table_cell_detection/: mod.rs  postprocess.rs  predictor.rs  preprocess.rs
onnx-ocr/src/table_cls/: mod.rs  postprocess.rs  predictor.rs
onnx-ocr/src/table_structure/: postprocess.rs  predictor.rs  preprocess.rs
onnx-ocr/src/text_detection/: postprocess.rs  predictor.rs  preprocess.rs
onnx-ocr/src/text_recognition/: mod.rs  postprocess.rs  predictor.rs  preprocess.rs
src/: App.jsx  main.js  preload.js  renderer.jsx
src/components/: editor.jsx  (+3 more)
(+4 files in other folders)
