[package]
name = "onnx_ocr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clipper2-sys = "0.5.0"
config = "0.15.17"
image = "0.25.8"
imageproc = "0.25.0"
itertools = "0.14.0"
ndarray = "0.16.1"
ort = {version="2.0.0-rc.10"}
pdfium-render = "0.8.35"
serde_json = "1.0.143"
tracing-subscriber = "0.3.20"
